fix outfits overflow

--- a/frontend/src/components/app.css
+++ b/frontend/src/components/app.css
@@ -1,6 +1,6 @@
 .main{
     margin-top:91px;
-    min-height: 100%;
+    min-height: 100vh;
     height: 100%;
     width: 100%;
     background-image:
