--- a/frontend/src/components/profile/profile.css
+++ b/frontend/src/components/profile/profile.css
@@ -1,6 +1,6 @@
 .profile-page{
   height: 100%;
-  width: 100%;
+  width: 100VW
 }
 
 .wardrobe{
